# PBDynamics

./: .gitignore  CMakeLists.txt  README.md  build.sh  imgui.ini  log.txt
depends/: tiny_obj_loader.h
shaders/: shader.frag  shader.vert  shader.vs
src/: camera.cpp  camera.hpp  engine.cpp  engine.hpp  init.cpp  init.hpp  main.cpp  obj.hpp  particle.hpp  primitive.cpp  primitive.hpp  shader.cpp  shader.hpp
